# fingerprintCLI

./: README.md  output1.json  output2.json  pyproject.toml
src/fingerprintcli/: cli.py
